<resources>
    <string name="app_name">NariñoMusic</string>
    <string name="pass_hint">Contraseña</string>
    <string name="email_hint">Correo eléctronico</string>
    <string name="login_btn_text">Iniciar Sesión</string>
    <string name="login_reg_btn_text">¿Necesita una nueva cuenta?</string>
    <string name="action_search_text">Buscar</string>
    <string name="action_setting_text">Configuraciones de la cuenta</string>
    <string name="action_logout_text">Cerrar sesión</string>

    <string name="reg_btn_text">Registrar</string>
    <string name="reg_login_text">Cancelar</string>
    <string name="reg_pass_text">Contraseña</string>
    <string name="reg_confirm_pass_text">Confirmar contraseña</string>

    <string name="setup_name_hint">Nombre completo</string>
    <string name="setup_save_btn">Guardar configuración de cuenta</string>
    <string name="setup_name_hint_text">Nombre</string>
    <string name="setup_last_hint_text">Apellido</string>
    <string name="setup_btn_name_text">Guardar configuración de cuenta</string>

    <string name="post_desc_hint">Nombre de la agrupación</string>
    <string name="post_gen_hint">Género músical</string>
    <string name="post_lugar_hint">Lugar de residencia</string>
    <string name="post_costo_hint">Costo por servicio</string>
    <string name="post_canciones_hint">Canciones interpretadas</string>

    <string name="new_post_btn_hint">Publicar</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notificaciones</string>
    <string name="bottom_ac_text">Cuenta</string>
    <string name="reg_artista">Artísta Musical</string>
    <string name="reg_usuario">Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setup_date_hint_text">Fecha de nacimiento</string>
    <string name="login_reset_pass">¿Olvidaste tu contraseña?</string>

    <string name="account_btn_text">Actualizar</string>
    <string name="reset_btn_text">Restablecer contraseña</string>
    <string name="btn_reservation">Reservar Servicio</string>
</resources>
