<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/regPageLogo"
            android:layout_width="259dp"
            android:layout_height="223dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/narinomusic"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@color/whiteTransparentHalf"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/id_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/reg_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:hint="@string/reg_confirm_pass_text"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@color/whiteTransparentHalf"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButton"
            android:layout_marginBottom="10dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/login_btn_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/login_reg_btn_text"
            android:layout_marginBottom="10dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textAllCaps="false"
            android:textColor="@color/colorButton"
            android:textSize="18sp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleBtn"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </com.google.android.gms.common.SignInButton>





    </LinearLayout>





</LinearLayout>